--- a/about.html
+++ b/about.html
@@ -11,80 +11,63 @@
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
   <style>
-    body { padding-top: 90px !important; background-color: #fafafa; }
-    @media (max-width: 960px) { body { padding-top: 70px !important; } }
+    body { padding-top: 80px !important; }
 
-    .about-header { text-align: center; padding: 2rem 1rem; margin-bottom: 2rem; }
-    .about-header h1 { font-size: 2.5rem; font-weight: 800; color: #1e293b; }
-
-    /* شبكة المعلومات */
+    /* تنسيق كروت المعلومات (الرؤية والرسالة) */
     .info-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin-bottom: 4rem;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin: 40px 0;
     }
 
     .info-card {
-      padding: 2rem;
-      background: #ffffff;
+      background: #fff;
+      padding: 30px;
+      border-radius: 16px;
       border: 1px solid #e2e8f0;
-      border-radius: 20px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.02);
     }
 
-    .info-card h3 { color: #0284c7; margin-bottom: 12px; font-size: 1.2rem; font-weight: 700; }
-    .info-card p { line-height: 1.7; color: #64748b; font-size: 0.95rem; }
+    .info-card h3 { color: #0284c7; margin-bottom: 15px; font-weight: 800; }
+    .info-card p { color: #64748b; line-height: 1.7; }
 
-    /* التصميم الجديد لبوكس الأعضاء والإدارة */
-    .members-section {
-      background: white;
-      padding: 3rem 2rem;
-      border-radius: 30px;
-      border: 1px solid #f1f5f9;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.03);
-    }
-
+    /* تنسيق كروت الأعضاء (نفس نمط الأخبار) */
     .members-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 2.5rem;
-      margin-top: 3rem;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 25px;
+      margin-top: 30px;
     }
 
     .member-card {
-      text-align: center;
-      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      background: white;
+      border-radius: 16px;
+      overflow: hidden;
+      border: 1px solid #e2e8f0;
+      transition: transform 0.2s;
     }
 
-    .member-card:hover { transform: translateY(-10px); }
+    .member-card:hover { transform: translateY(-5px); }
 
-    .member-img-container {
-      position: relative;
-      width: 160px;
-      height: 160px;
-      margin: 0 auto 15px;
-      border-radius: 50%;
-      padding: 5px;
-      background: linear-gradient(135deg, #0284c7 0%, #0ea5e9 100%);
+    .member-img-box {
+      width: 100%;
+      aspect-ratio: 1/1;
+      background: #f1f5f9;
     }
 
-    .member-card img {
+    .member-img-box img {
       width: 100%;
       height: 100%;
-      border-radius: 50%;
       object-fit: cover;
-      border: 4px solid white;
-      background: #f8fafc;
     }
 
-    .member-card h3 { font-size: 1.1rem; color: #1e293b; margin-top: 10px; font-weight: 700; }
-    .member-card p { font-size: 0.85rem; color: #0284c7; font-weight: 600; margin-top: 4px; }
+    .member-details { padding: 20px; text-align: center; }
+    .member-details h3 { font-size: 1.1rem; color: #1e293b; margin-bottom: 5px; font-weight: 700; }
+    .member-details p { color: #0284c7; font-size: 0.9rem; font-weight: 600; }
 
     @media (max-width: 600px) {
-      .members-grid { grid-template-columns: repeat(2, 1fr); gap: 1.5rem; }
-      .member-img-container { width: 120px; height: 120px; }
-      .members-section { padding: 2rem 1rem; }
+      .members-grid { grid-template-columns: repeat(2, 1fr); gap: 15px; }
+      .member-details { padding: 12px; }
     }
   </style>
 </head>
@@ -95,7 +78,7 @@
     <a class="brand" href="/index.html">
       <img src="/assets/apple-touch-icon.png" class="logo" alt="Logo">
       <span data-lang="ar">مجلس طلاب خطوة</span>
-      <span data-lang="en" hidden>Khotwa Student Council</span>
+      <span data-lang="en" hidden>Khotwa Council</span>
     </a>
     <button id="menu-toggle" class="menu-toggle">☰</button>
     <div class="nav-links" id="primary-nav">
@@ -103,86 +86,73 @@
       <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
       <a href="/about.html" class="active"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
       <a href="/contact.html"><span data-lang="ar">اتصل بنا</span><span data-lang="en" hidden>Contact</span></a>
-      <button id="lang-toggle-btn" class="lang-toggle">English</button>
+      <button id="lang-toggle" class="lang-toggle">English</button>
     </div>
   </div>
 </nav>
 
 <main class="container">
-  <header class="about-header">
+  <div style="text-align:center; margin: 40px 0;">
     <h1 data-lang="ar">من نحن</h1>
     <h1 data-lang="en" hidden>About Us</h1>
-  </header>
-
-  <div class="info-grid">
-    <article class="info-card" data-section="vision">
-      <h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3>
-      <p>...</p>
-    </article>
-    <article class="info-card" data-section="mission">
-      <h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3>
-      <p>...</p>
-    </article>
-    <article class="info-card" data-section="goals">
-      <h3 data-lang="ar">الأهداف</h3><h3 data-lang="en" hidden>Goals</h3>
-      <p>...</p>
-    </article>
-    <article class="info-card" data-section="organization">
-      <h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Organization</h3>
-      <p>...</p>
-    </article>
   </div>
 
-  <section class="members-section">
-    <div class="section-head" style="text-align:center;">
-      <h2 data-lang="ar">أعضاء المجلس والإدارة</h2>
-      <h2 data-lang="en" hidden>Council Board</h2>
-      <div style="width: 50px; height: 3px; background: #0284c7; margin: 15px auto;"></div>
+  <div class="info-grid">
+    <div class="info-card" data-section="vision">
+      <h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3>
+      <p>...</p>
     </div>
+    <div class="info-card" data-section="mission">
+      <h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3>
+      <p>...</p>
+    </div>
+  </div>
+
+  <section>
+    <h2 style="text-align:center;" data-lang="ar">أعضاء المجلس</h2>
+    <h2 style="text-align:center;" data-lang="en" hidden>Council Members</h2>
     
     <div class="members-grid" id="council-members-container">
       </div>
   </section>
 </main>
 
-<footer style="background:#fff; border-top:1px solid #e2e8f0; padding:3rem 0; margin-top:5rem;">
-  <div class="container" style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:2rem;">
+<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:40px 0; margin-top:60px;">
+  <div class="container" style="display:flex; justify-content:space-between; align-items:center;">
     <div class="muted">
-      <span data-lang="ar">© 2026 مجلس طلاب خطوة - ملبورن</span>
-      <span data-lang="en" hidden>© 2026 Khotwa Student Council - Melbourne</span>
+      <span data-lang="ar">© 2026 مجلس طلاب خطوة</span>
+      <span data-lang="en" hidden>© 2026 Khotwa Council</span>
     </div>
-    <div class="socials">
-      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" style="color:#e1306c; font-weight:bold; text-decoration:none;">Instagram</a>
-    </div>
+    <a href="https://instagram.com/khotwa.sc" target="_blank" style="color:#e1306c; text-decoration:none; font-weight:bold;">Instagram</a>
   </div>
 </footer>
 
 <script src="/js/config.js"></script>
 <script src="/js/language-toggle.js"></script>
 <script src="/js/menu-toggle.js"></script>
-<script src="/js/about-loader.js"></script>
 
 <script>
-  // حل مشكلة تحديث اللغة في البيانات المسحوبة من الـ API
-  const langBtn = document.getElementById('lang-toggle-btn');
-  if (langBtn) {
-    langBtn.addEventListener('click', () => {
-      // إعطاء وقت بسيط للمتصفح لتغيير الـ LocalStorage ثم إعادة تحميل البيانات
-      setTimeout(() => {
-        const currentLang = localStorage.getItem('khotwa_lang') || 'ar';
-        localStorage.setItem('language', currentLang);
-        // استدعاء وظيفة التحميل مرة أخرى إذا كانت معرفة في about-loader.js
-        location.reload(); 
-      }, 100);
-    });
+  // لضمان تغيير اللغة في البيانات التي تأتي من السكربت الخارجي
+  async function loadData() {
+    const lang = localStorage.getItem('khotwa_lang') || 'ar';
+    localStorage.setItem('language', lang); // مزامنة مع about-loader.js
+
+    // ننتظر قليلاً ليتأكد تحميل ملف الـ API
+    if (typeof initAboutPage === 'function') {
+      initAboutPage();
+    }
   }
 
-  // مزامنة اللغة عند التحميل الأول
-  window.addEventListener('DOMContentLoaded', () => {
-    const currentLang = localStorage.getItem('khotwa_lang') || 'ar';
-    localStorage.setItem('language', currentLang);
+  // إعادة تحميل البيانات عند الضغط على زر اللغة
+  document.getElementById('lang-toggle').addEventListener('click', () => {
+    setTimeout(() => {
+      location.reload(); 
+    }, 50);
   });
+
+  window.addEventListener('DOMContentLoaded', loadData);
 </script>
 
+<script src="/js/about-loader.js"></script>
 </body>
 </html>
