--- a/about.html
+++ b/about.html
@@ -11,30 +11,37 @@
   <link rel="stylesheet" href="/assets/enhanced-navbar.css">
 
   <style>
-    body { padding-top: 80px !important; }
+    /* إصلاح تداخل الناف بار والفوتر في الجوال */
+    body { 
+      padding-top: 100px !important; 
+      background-color: #fcfcfc; 
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    
+    main { flex: 1; }
 
-    /* تنسيق كروت المعلومات (الرؤية والرسالة) */
+    /* كروت الرؤية والرسالة */
     .info-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px;
-      margin: 40px 0;
+      margin-bottom: 50px;
     }
-
     .info-card {
       background: #fff;
       padding: 30px;
-      border-radius: 16px;
+      border-radius: 12px;
       border: 1px solid #e2e8f0;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.02);
     }
-
     .info-card h3 { color: #0284c7; margin-bottom: 15px; font-weight: 800; }
-    .info-card p { color: #64748b; line-height: 1.7; }
 
-    /* تنسيق كروت الأعضاء (نفس نمط الأخبار) */
+    /* تصميم شبكة الأعضاء (حل مشكلة القياسات) */
     .members-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       gap: 25px;
       margin-top: 30px;
     }
@@ -44,21 +51,25 @@
       border-radius: 16px;
       overflow: hidden;
       border: 1px solid #e2e8f0;
-      transition: transform 0.2s;
+      transition: transform 0.2s ease;
+      display: flex;
+      flex-direction: column;
     }
 
     .member-card:hover { transform: translateY(-5px); }
 
-    .member-img-box {
+    /* حاوية الصورة لضمان القياس المربع 1:1 */
+    .img-wrapper {
       width: 100%;
-      aspect-ratio: 1/1;
+      aspect-ratio: 1 / 1;
       background: #f1f5f9;
+      overflow: hidden;
     }
 
-    .member-img-box img {
+    .img-wrapper img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: cover; /* يمنع التمطيط تماماً */
     }
 
     .member-details { padding: 20px; text-align: center; }
@@ -66,6 +77,7 @@
     .member-details p { color: #0284c7; font-size: 0.9rem; font-weight: 600; }
 
     @media (max-width: 600px) {
+      body { padding-top: 80px !important; }
       .members-grid { grid-template-columns: repeat(2, 1fr); gap: 15px; }
       .member-details { padding: 12px; }
     }
@@ -86,13 +98,13 @@
       <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
       <a href="/about.html" class="active"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
       <a href="/contact.html"><span data-lang="ar">اتصل بنا</span><span data-lang="en" hidden>Contact</span></a>
-      <button id="lang-toggle" class="lang-toggle">English</button>
+      <button id="lang-toggle-btn" class="lang-toggle">English</button>
     </div>
   </div>
 </nav>
 
 <main class="container">
-  <div style="text-align:center; margin: 40px 0;">
+  <div style="text-align:center; margin-bottom: 40px;">
     <h1 data-lang="ar">من نحن</h1>
     <h1 data-lang="en" hidden>About Us</h1>
   </div>
@@ -113,11 +125,12 @@
     <h2 style="text-align:center;" data-lang="en" hidden>Council Members</h2>
     
     <div class="members-grid" id="council-members-container">
-      </div>
+      <p style="text-align:center; grid-column: 1/-1;">جاري التحميل...</p>
+    </div>
   </section>
 </main>
 
-<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:40px 0; margin-top:60px;">
+<footer style="background:#f8fafc; border-top:1px solid #e2e8f0; padding:3rem 0; margin-top:4rem;">
   <div class="container" style="display:flex; justify-content:space-between; align-items:center;">
     <div class="muted">
       <span data-lang="ar">© 2026 مجلس طلاب خطوة</span>
@@ -130,29 +143,27 @@
 <script src="/js/config.js"></script>
 <script src="/js/language-toggle.js"></script>
 <script src="/js/menu-toggle.js"></script>
+<script src="/js/about-loader.js"></script>
 
 <script>
-  // لضمان تغيير اللغة في البيانات التي تأتي من السكربت الخارجي
-  async function loadData() {
-    const lang = localStorage.getItem('khotwa_lang') || 'ar';
-    localStorage.setItem('language', lang); // مزامنة مع about-loader.js
-
-    // ننتظر قليلاً ليتأكد تحميل ملف الـ API
-    if (typeof initAboutPage === 'function') {
-      initAboutPage();
-    }
+  // حل مشكلة اللغة: مزامنة وإعادة تحميل عند التغيير
+  const btn = document.getElementById('lang-toggle-btn');
+  if (btn) {
+    btn.addEventListener('click', () => {
+      setTimeout(() => {
+        const currentLang = localStorage.getItem('khotwa_lang') || 'ar';
+        localStorage.setItem('language', currentLang); // مزامنة مع about-loader.js
+        location.reload(); 
+      }, 50);
+    });
   }
 
-  // إعادة تحميل البيانات عند الضغط على زر اللغة
-  document.getElementById('lang-toggle').addEventListener('click', () => {
-    setTimeout(() => {
-      location.reload(); 
-    }, 50);
+  // مزامنة عند أول تحميل للبيانات
+  window.addEventListener('DOMContentLoaded', () => {
+    const currentLang = localStorage.getItem('khotwa_lang') || 'ar';
+    localStorage.setItem('language', currentLang);
   });
-
-  window.addEventListener('DOMContentLoaded', loadData);
 </script>
 
-<script src="/js/about-loader.js"></script>
 </body>
 </html>
