--- a/index.html
+++ b/index.html
@@ -29,14 +29,24 @@
     .hero h1 { font-size: clamp(2.5rem, 5vw, 4rem); color: var(--primary); margin-bottom: 1.5rem; font-weight: 800; }
     .hero p { font-size: 1.25rem; color: #64748b; max-width: 800px; margin: 0 auto 2.5rem; line-height: 1.8; }
     .cta-buttons { display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; }
-    .btn-main { padding: 1rem 2.5rem; border-radius: 14px; text-decoration: none; font-weight: 700; transition: 0.3s; }
-    .btn-primary { background: var(--primary); color: white; }
+    .btn-main { padding: 1rem 2.5rem; border-radius: 14px; text-decoration: none; font-weight: 700; transition: 0.3s; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
+    .btn-primary { background: var(--primary); color: white; border: none; }
     .btn-secondary { background: white; color: var(--primary); border: 2px solid var(--primary); }
     .stats-section { padding: 4rem 0; background: white; }
     .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; text-align: center; }
-    .stat-item h2 { font-size: 3rem; color: var(--primary); font-weight: 800; }
+    .stat-item h2 { font-size: 3rem; color: var(--primary); margin-bottom: 0.5rem; font-weight: 800; }
+    .services-section { padding: 5rem 0; background: #fcfcfc; }
     .service-card { background: white; padding: 2.5rem; border-radius: 20px; text-align: center; border: 1px solid #f1f5f9; transition: 0.3s; }
-    .service-card:hover { transform: translateY(-10px); }
+    .service-card:hover { transform: translateY(-10px); box-shadow: 0 20px 40px rgba(0,0,0,0.05); }
+    .icon-wrapper { color: var(--primary); margin-bottom: 1.5rem; }
+    .main-footer { background: #ffffff; border-top: 1px solid #e2e8f0; padding: 4rem 0 2rem; margin-top: 4rem; }
+    .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 3rem; margin-bottom: 3rem; }
+    .footer-col h4 { color: var(--primary); margin-bottom: 1.5rem; font-size: 1.2rem; }
+    .footer-links { list-style: none; padding: 0; }
+    .footer-links li { margin-bottom: 0.8rem; }
+    .footer-links a { color: #64748b; text-decoration: none; transition: 0.2s; }
+    .footer-links a:hover { color: var(--primary); padding-inline-start: 5px; }
+    .footer-bottom { text-align: center; padding-top: 2rem; border-top: 1px solid #f1f5f9; color: #94a3b8; font-size: 0.9rem; }
     [hidden] { display: none !important; }
   </style>
 </head>
@@ -49,6 +59,9 @@
         <span data-lang="ar">مجلس طلاب خطوة</span>
         <span data-lang="en" hidden>Khotwa Student Council</span>
       </a>
+      <button id="menu-toggle" class="menu-toggle" aria-label="القائمة">
+        <svg viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 6h16M4 12h16M4 18h16"></path></svg>
+      </button>
       <div class="nav-links" id="primary-nav">
         <a href="/index.html" class="active"><span data-lang="ar">الرئيسية</span><span data-lang="en" hidden>Home</span></a>
         <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
@@ -79,11 +92,61 @@
     </div>
   </section>
 
+  <section class="services-section">
+    <div class="container">
+      <div style="text-align: center; margin-bottom: 3rem;">
+        <h2 data-lang="ar">ماذا يقدم المجلس؟</h2>
+      </div>
+      <div class="stats-grid">
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M22 10v6M2 10l10-5 10 5-10 5z"/><path d="M6 12v5c3 3 9 3 12 0v-5"/></svg>
+          </div>
+          <h3 data-lang="ar">دعم أكاديمي</h3>
+        </div>
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/></svg>
+          </div>
+          <h3 data-lang="ar">أنشطة اجتماعية</h3>
+        </div>
+        <div class="service-card">
+          <div class="icon-wrapper">
+            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+          </div>
+          <h3 data-lang="ar">تطوير المهارات</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="main-footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-col">
+          <h4 data-lang="ar">مجلس طلاب خطوة</h4>
+          <p data-lang="ar">مجلس طلابي تطوعي إماراتي يهدف لتمثيل الطلاب وتقديم الدعم في ملبورن.</p>
+        </div>
+        <div class="footer-col">
+          <h4 data-lang="ar">روابط سريعة</h4>
+          <ul class="footer-links">
+            <li><a href="/about.html"><span data-lang="ar">من نحن</span></a></li>
+            <li><a href="/news.html"><span data-lang="ar">الأخبار</span></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>© <span id="year"></span> Khotwa Council | ملبورن، أستراليا</p>
+      </div>
+    </div>
+  </footer>
+
   <script src="/assets/push-notifications.js"></script>
   <script src="/assets/comments-and-registration.js"></script>
 
   <script>
-    // وظيفة العدادات المتحركة
+    document.getElementById('year').textContent = new Date().getFullYear();
+
     function animateValue(id, start, end, duration) {
         let startTimestamp = null;
         const step = (timestamp) => {
@@ -97,19 +160,16 @@
         window.requestAnimationFrame(step);
     }
 
-    // لغة الواجهة والتحميل
     document.addEventListener('DOMContentLoaded', () => {
       animateValue("count1", 0, 50, 2000);
       animateValue("count2", 0, 200, 2000);
       animateValue("count3", 0, 100, 2000);
 
-      // تفعيل الـ Service Worker للمميزات المتقدمة (sw.js)
       if ('serviceWorker' in navigator) {
           navigator.serviceWorker.register('/sw.js').catch(err => console.log('SW error:', err));
       }
     });
 
-    // تبديل اللغة
     document.getElementById('lang-toggle').addEventListener('click', () => {
       const currentLang = document.documentElement.lang === 'ar' ? 'en' : 'ar';
       document.documentElement.lang = currentLang;
@@ -117,5 +177,6 @@
       document.querySelectorAll('[data-lang]').forEach(el => el.hidden = el.getAttribute('data-lang') !== currentLang);
     });
   </script>
+  <script src="/js/menu-toggle.js"></script>
 </body>
 </html>
