--- a/index.html
+++ b/index.html
@@ -61,11 +61,21 @@
         <span data-lang="en" hidden>Khotwa Student Council</span>
       </a>
       <div class="nav-links" id="primary-nav">
-        <a href="/index.html" class="active"><span data-lang="ar">الرئيسية</span><span data-lang="en" hidden>Home</span></a>
-        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
-        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
-        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
-        <button class="lang-toggle" id="lang-toggle"><span data-lang="ar">English</span><span data-lang="en" hidden>عربي</span></button>
+        <a href="/index.html" class="active">
+          <span data-lang="ar">الرئيسية</span><span data-lang="en" hidden>Home</span>
+        </a>
+        <a href="/news.html">
+          <span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span>
+        </a>
+        <a href="/events.html">
+          <span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span>
+        </a>
+        <a href="/calendar.html">
+          <span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span>
+        </a>
+        <button class="lang-toggle" id="lang-toggle">
+          <span data-lang="ar">English</span><span data-lang="en" hidden>عربي</span>
+        </button>
       </div>
     </div>
   </nav>
@@ -78,12 +88,10 @@
       <p data-lang="en" hidden>The home for Khotwa students in Melbourne. We unite through education, initiative, and community spirit.</p>
       <div class="cta-buttons">
         <a href="/events.html" class="btn-main btn-primary">
-          <span data-lang="ar">استكشف الفعاليات</span>
-          <span data-lang="en" hidden>Explore Events</span>
+          <span data-lang="ar">استكشف الفعاليات</span><span data-lang="en" hidden>Explore Events</span>
         </a>
         <a href="/about.html" class="btn-main btn-secondary">
-          <span data-lang="ar">تعرف علينا</span>
-          <span data-lang="en" hidden>About Us</span>
+          <span data-lang="ar">تعرف علينا</span><span data-lang="en" hidden>About Us</span>
         </a>
       </div>
     </div>
@@ -93,18 +101,15 @@
     <div class="container stats-grid">
       <div class="stat-item">
         <h2 id="count1">+0</h2>
-        <p data-lang="ar">فعالية سنوياً</p>
-        <p data-lang="en" hidden>Events Yearly</p>
+        <p data-lang="ar">فعالية سنوياً</p><p data-lang="en" hidden>Events Yearly</p>
       </div>
       <div class="stat-item">
         <h2 id="count2">+0</h2>
-        <p data-lang="ar">طالب مستفيد</p>
-        <p data-lang="en" hidden>Students Helped</p>
+        <p data-lang="ar">طالب مستفيد</p><p data-lang="en" hidden>Students Helped</p>
       </div>
       <div class="stat-item">
         <h2 id="count3">0%</h2>
-        <p data-lang="ar">دعم طلابي</p>
-        <p data-lang="en" hidden>Student Support</p>
+        <p data-lang="ar">دعم طلابي</p><p data-lang="en" hidden>Student Support</p>
       </div>
     </div>
   </section>
@@ -118,21 +123,21 @@
       <div class="stats-grid">
         <div class="service-card">
           <div class="icon-wrapper">
-            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M22 10v6M2 10l10-5 10 5-10 5z"/><path d="M6 12v5c3 3 9 3 12 0v-5"/></svg>
+            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 10v6M2 10l10-5 10 5-10 5z"/><path d="M6 12v5c3 3 9 3 12 0v-5"/></svg>
           </div>
           <h3 data-lang="ar">دعم أكاديمي</h3>
           <h3 data-lang="en" hidden>Academic Support</h3>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
-            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/></svg>
+            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/></svg>
           </div>
           <h3 data-lang="ar">أنشطة اجتماعية</h3>
           <h3 data-lang="en" hidden>Social Activities</h3>
         </div>
         <div class="service-card">
           <div class="icon-wrapper">
-            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
           </div>
           <h3 data-lang="ar">تطوير المهارات</h3>
           <h3 data-lang="en" hidden>Skills Development</h3>
@@ -145,22 +150,19 @@
     <div class="container">
       <div class="footer-grid">
         <div class="footer-col">
-          <h4 data-lang="ar">مجلس طلاب خطوة</h4>
-          <h4 data-lang="en" hidden>Khotwa Student Council</h4>
+          <h4 data-lang="ar">مجلس طلاب خطوة</h4><h4 data-lang="en" hidden>Khotwa Council</h4>
           <p data-lang="ar">مجلس طلابي تطوعي إماراتي يهدف لتمثيل الطلاب وتقديم الدعم في ملبورن.</p>
-          <p data-lang="en" hidden>An Emirati student council representing and supporting students in Melbourne.</p>
+          <p data-lang="en" hidden>A student council representing and supporting students in Melbourne.</p>
         </div>
         <div class="footer-col">
-          <h4 data-lang="ar">روابط سريعة</h4>
-          <h4 data-lang="en" hidden>Quick Links</h4>
+          <h4 data-lang="ar">روابط سريعة</h4><h4 data-lang="en" hidden>Quick Links</h4>
           <ul class="footer-links">
             <li><a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About Us</span></a></li>
             <li><a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a></li>
           </ul>
         </div>
         <div class="footer-col">
-          <h4 data-lang="ar">تابعنا</h4>
-          <h4 data-lang="en" hidden>Follow Us</h4>
+          <h4 data-lang="ar">تابعنا</h4><h4 data-lang="en" hidden>Follow Us</h4>
           <div class="social-icons">
             <a href="https://instagram.com/khotwa.sc" target="_blank">
                <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram">
@@ -170,8 +172,7 @@
       </div>
       <div class="footer-bottom">
         <p>© <span id="year"></span> Khotwa Council | 
-           <span data-lang="ar">ملبورن، أستراليا</span>
-           <span data-lang="en" hidden>Melbourne, Australia</span>
+           <span data-lang="ar">ملبورن، أستراليا</span><span data-lang="en" hidden>Melbourne, Australia</span>
         </p>
       </div>
     </div>
@@ -190,7 +191,7 @@
             const progress = Math.min((timestamp - startTimestamp) / duration, 1);
             const currentVal = Math.floor(progress * (end - start) + start);
             const element = document.getElementById(id);
-            element.innerHTML = (id === 'count3' ? currentVal + "%" : "+" + currentVal);
+            if(element) element.innerHTML = (id === 'count3' ? currentVal + "%" : "+" + currentVal);
             if (progress < 1) window.requestAnimationFrame(step);
         };
         window.requestAnimationFrame(step);
