--- a/index.html
+++ b/index.html
@@ -18,37 +18,27 @@
 
   <style>
     :root { --primary: #1e40af; --ring: #e2e8f0; }
-    .hero {
-      padding: 8rem 0;
-      background: radial-gradient(circle at top right, #f8fafc, #e2e8f0);
-      text-align: center;
-      border-bottom: 1px solid var(--ring);
-      position: relative;
-      overflow: hidden;
-    }
-    .hero h1 { font-size: clamp(2.5rem, 5vw, 4rem); color: var(--primary); margin-bottom: 1.5rem; font-weight: 800; }
+    .hero { padding: 8rem 0; background: radial-gradient(circle at top right, #f8fafc, #e2e8f0); text-align: center; border-bottom: 1px solid var(--ring); }
+    .hero h1 { font-size: clamp(2.5rem, 5vw, 4rem); color: var(--primary); font-weight: 800; margin-bottom: 1.5rem; }
     .hero p { font-size: 1.25rem; color: #64748b; max-width: 800px; margin: 0 auto 2.5rem; line-height: 1.8; }
     .cta-buttons { display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap; }
-    .btn-main { padding: 1rem 2.5rem; border-radius: 14px; text-decoration: none; font-weight: 700; transition: 0.3s; box-shadow: 0 4px 6px rgba(0,0,0,0.05); }
-    .btn-primary { background: var(--primary); color: white; border: none; }
+    .btn-main { padding: 1rem 2.5rem; border-radius: 14px; text-decoration: none; font-weight: 700; transition: 0.3s; }
+    .btn-primary { background: var(--primary); color: white; }
     .btn-secondary { background: white; color: var(--primary); border: 2px solid var(--primary); }
     .stats-section { padding: 4rem 0; background: white; }
     .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; text-align: center; }
-    .stat-item h2 { font-size: 3rem; color: var(--primary); margin-bottom: 0.5rem; font-weight: 800; }
-    .services-section { padding: 5rem 0; background: #fcfcfc; }
-    .service-card { background: white; padding: 2.5rem; border-radius: 20px; text-align: center; border: 1px solid #f1f5f9; transition: 0.3s; }
-    .service-card:hover { transform: translateY(-10px); box-shadow: 0 20px 40px rgba(0,0,0,0.05); }
-    .icon-wrapper { color: var(--primary); margin-bottom: 1.5rem; }
-    .main-footer { background: #ffffff; border-top: 1px solid #e2e8f0; padding: 4rem 0 2rem; margin-top: 4rem; }
-    .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 3rem; margin-bottom: 3rem; }
-    .footer-col h4 { color: var(--primary); margin-bottom: 1.5rem; font-size: 1.2rem; }
-    .footer-links { list-style: none; padding: 0; }
-    .footer-links li { margin-bottom: 0.8rem; }
-    .footer-links a { color: #64748b; text-decoration: none; transition: 0.2s; }
-    .footer-links a:hover { color: var(--primary); padding-inline-start: 5px; }
-    .footer-bottom { text-align: center; padding-top: 2rem; border-top: 1px solid #f1f5f9; color: #94a3b8; font-size: 0.9rem; }
-    .social-icons img { width: 24px; height: 24px; transition: 0.3s; }
+    .stat-item h2 { font-size: 3rem; color: var(--primary); font-weight: 800; }
+    .main-footer { background: white; border-top: 1px solid #e2e8f0; padding: 4rem 0 2rem; }
+    .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; }
     [hidden] { display: none !important; }
+
+    /* تنسيق إضافي لزر القائمة في الجوال لضمان ظهوره */
+    .menu-toggle { display: none; background: none; border: none; cursor: pointer; color: var(--primary); }
+    @media (max-width: 768px) {
+      .menu-toggle { display: block; }
+      .nav-links { display: none; flex-direction: column; position: absolute; top: 100%; left: 0; right: 0; background: white; padding: 1rem; border-bottom: 1px solid var(--ring); }
+      .nav-links.active { display: flex; }
+    }
   </style>
 </head>
 <body>
@@ -56,26 +46,24 @@
   <nav class="navbar">
     <div class="container nav-inner">
       <a class="brand" href="/index.html">
-        <img src="/assets/apple-touch-icon.png" class="logo" alt="Logo">
+        <img src="/apple-touch-icon.png" class="logo" alt="Logo">
         <span data-lang="ar">مجلس طلاب خطوة</span>
-        <span data-lang="en" hidden>Khotwa Student Council</span>
+        <span data-lang="en" hidden>Khotwa Council</span>
       </a>
-      <div class="nav-links" id="primary-nav">
-        <a href="/index.html" class="active">
-          <span data-lang="ar">الرئيسية</span><span data-lang="en" hidden>Home</span>
-        </a>
-        <a href="/news.html">
-          <span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span>
-        </a>
-        <a href="/events.html">
-          <span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span>
-        </a>
-        <a href="/calendar.html">
-          <span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span>
-        </a>
-        <button class="lang-toggle" id="lang-toggle">
-          <span data-lang="ar">English</span><span data-lang="en" hidden>عربي</span>
-        </button>
+
+      <button class="menu-toggle" id="menu-btn" aria-label="Menu">
+        <svg width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <line x1="3" y1="12" x2="21" y2="12"></line>
+          <line x1="3" y1="6" x2="21" y2="6"></line>
+          <line x1="3" y1="18" x2="21" y2="18"></line>
+        </svg>
+      </button>
+
+      <div class="nav-links" id="nav-menu">
+        <a href="/index.html" class="active"><span data-lang="ar">الرئيسية</span><span data-lang="en" hidden>Home</span></a>
+        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
+        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
+        <button class="lang-toggle" id="lang-toggle"><span data-lang="ar">English</span><span data-lang="en" hidden>عربي</span></button>
       </div>
     </div>
   </nav>
@@ -84,8 +72,8 @@
     <div class="container">
       <h1 data-lang="ar">أهلاً بك في مجلس خطوة</h1>
       <h1 data-lang="en" hidden>Welcome to Khotwa Council</h1>
-      <p data-lang="ar">البيت الجامعي لطلاب برنامج خطوة في ملبورن. نجمع بين العلم، المبادرة، والروح الجماعية لتطوير مستقبلنا.</p>
-      <p data-lang="en" hidden>The home for Khotwa students in Melbourne. We unite through education, initiative, and community spirit.</p>
+      <p data-lang="ar">البيت الجامعي لطلاب برنامج خطوة في ملبورن.</p>
+      <p data-lang="en" hidden>The home for Khotwa students in Melbourne.</p>
       <div class="cta-buttons">
         <a href="/events.html" class="btn-main btn-primary">
           <span data-lang="ar">استكشف الفعاليات</span><span data-lang="en" hidden>Explore Events</span>
@@ -100,130 +88,73 @@
   <section class="stats-section">
     <div class="container stats-grid">
       <div class="stat-item">
-        <h2 id="count1">+0</h2>
-        <p data-lang="ar">فعالية سنوياً</p><p data-lang="en" hidden>Events Yearly</p>
+        <h2 id="count1">+50</h2>
+        <p data-lang="ar">فعالية</p><p data-lang="en" hidden>Events</p>
       </div>
       <div class="stat-item">
-        <h2 id="count2">+0</h2>
-        <p data-lang="ar">طالب مستفيد</p><p data-lang="en" hidden>Students Helped</p>
+        <h2 id="count2">+200</h2>
+        <p data-lang="ar">طالب</p><p data-lang="en" hidden>Students</p>
       </div>
       <div class="stat-item">
-        <h2 id="count3">0%</h2>
-        <p data-lang="ar">دعم طلابي</p><p data-lang="en" hidden>Student Support</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="services-section">
-    <div class="container">
-      <div style="text-align: center; margin-bottom: 3rem;">
-        <h2 data-lang="ar">ماذا يقدم المجلس؟</h2>
-        <h2 data-lang="en" hidden>Our Services</h2>
-      </div>
-      <div class="stats-grid">
-        <div class="service-card">
-          <div class="icon-wrapper">
-            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M22 10v6M2 10l10-5 10 5-10 5z"/><path d="M6 12v5c3 3 9 3 12 0v-5"/></svg>
-          </div>
-          <h3 data-lang="ar">دعم أكاديمي</h3>
-          <h3 data-lang="en" hidden>Academic Support</h3>
-        </div>
-        <div class="service-card">
-          <div class="icon-wrapper">
-            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/></svg>
-          </div>
-          <h3 data-lang="ar">أنشطة اجتماعية</h3>
-          <h3 data-lang="en" hidden>Social Activities</h3>
-        </div>
-        <div class="service-card">
-          <div class="icon-wrapper">
-            <svg viewBox="0 0 24 24" width="48" height="48" fill="none" stroke="currentColor" stroke-width="1.5"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
-          </div>
-          <h3 data-lang="ar">تطوير المهارات</h3>
-          <h3 data-lang="en" hidden>Skills Development</h3>
-        </div>
+        <h2 id="count3">100%</h2>
+        <p data-lang="ar">دعم</p><p data-lang="en" hidden>Support</p>
       </div>
     </div>
   </section>
 
   <footer class="main-footer">
-    <div class="container">
-      <div class="footer-grid">
-        <div class="footer-col">
-          <h4 data-lang="ar">مجلس طلاب خطوة</h4><h4 data-lang="en" hidden>Khotwa Council</h4>
-          <p data-lang="ar">مجلس طلابي تطوعي إماراتي يهدف لتمثيل الطلاب وتقديم الدعم في ملبورن.</p>
-          <p data-lang="en" hidden>A student council representing and supporting students in Melbourne.</p>
-        </div>
-        <div class="footer-col">
-          <h4 data-lang="ar">روابط سريعة</h4><h4 data-lang="en" hidden>Quick Links</h4>
-          <ul class="footer-links">
-            <li><a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About Us</span></a></li>
-            <li><a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4 data-lang="ar">تابعنا</h4><h4 data-lang="en" hidden>Follow Us</h4>
-          <div class="social-icons">
-            <a href="https://instagram.com/khotwa.sc" target="_blank">
-               <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram">
-            </a>
-          </div>
-        </div>
+    <div class="container footer-grid">
+      <div class="footer-col">
+        <h4 data-lang="ar">مجلس طلاب خطوة</h4><h4 data-lang="en" hidden>Khotwa Council</h4>
+        <p data-lang="ar">تمثيل الطلاب في ملبورن، أستراليا.</p>
+        <p data-lang="en" hidden>Representing students in Melbourne, Australia.</p>
       </div>
-      <div class="footer-bottom">
-        <p>© <span id="year"></span> Khotwa Council | 
-           <span data-lang="ar">ملبورن، أستراليا</span><span data-lang="en" hidden>Melbourne, Australia</span>
-        </p>
+      <div class="footer-col">
+        <h4 data-lang="ar">تابعنا</h4><h4 data-lang="en" hidden>Follow Us</h4>
+        <a href="https://instagram.com/khotwa.sc" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" width="24" height="24" alt="Instagram">
+        </a>
       </div>
     </div>
   </footer>
 
   <script src="/assets/push-notifications.js"></script>
   <script src="/assets/comments-and-registration.js"></script>
+  <script src="/js/menu-toggle.js"></script>
 
   <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-
-    function animateValue(id, start, end, duration) {
-        let startTimestamp = null;
-        const step = (timestamp) => {
-            if (!startTimestamp) startTimestamp = timestamp;
-            const progress = Math.min((timestamp - startTimestamp) / duration, 1);
-            const currentVal = Math.floor(progress * (end - start) + start);
-            const element = document.getElementById(id);
-            if(element) element.innerHTML = (id === 'count3' ? currentVal + "%" : "+" + currentVal);
-            if (progress < 1) window.requestAnimationFrame(step);
-        };
-        window.requestAnimationFrame(step);
+    // 1. نظام القائمة في الجوال
+    const menuBtn = document.getElementById('menu-btn');
+    const navMenu = document.getElementById('nav-menu');
+    if (menuBtn) {
+      menuBtn.addEventListener('click', () => {
+        navMenu.classList.toggle('active');
+      });
     }
 
-    function updateLanguage(lang) {
+    // 2. نظام تبديل اللغة
+    const langToggle = document.getElementById('lang-toggle');
+    const updateLang = (lang) => {
       document.documentElement.lang = lang;
       document.documentElement.dir = lang === 'ar' ? 'rtl' : 'ltr';
       document.querySelectorAll('[data-lang]').forEach(el => {
         el.hidden = el.getAttribute('data-lang') !== lang;
       });
-    }
+      localStorage.setItem('khotwa_lang', lang);
+    };
 
+    langToggle.addEventListener('click', () => {
+      const newLang = document.documentElement.lang === 'ar' ? 'en' : 'ar';
+      updateLang(newLang);
+    });
+
+    // 3. التحميل الأولي
     document.addEventListener('DOMContentLoaded', () => {
-      const savedLang = localStorage.getItem('khotwa_lang') || 'ar';
-      updateLanguage(savedLang);
-
-      animateValue("count1", 0, 50, 2000);
-      animateValue("count2", 0, 200, 2000);
-      animateValue("count3", 0, 100, 2000);
-
+      updateLang(localStorage.getItem('khotwa_lang') || 'ar');
       if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/sw.js').catch(err => console.log('SW error:', err));
+        navigator.serviceWorker.register('/sw.js');
       }
     });
-
-    document.getElementById('lang-toggle').addEventListener('click', () => {
-      const newLang = document.documentElement.lang === 'ar' ? 'en' : 'ar';
-      localStorage.setItem('khotwa_lang', newLang);
-      updateLanguage(newLang);
-    });
   </script>
-  <script src="/js/menu-toggle.js"></script>
 </body>
 </html>
